--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -20,10 +20,12 @@
 
         <ru.babaetskv.passionwoman.app.presentation.view.ToolbarView
             android:id="@+id/toolbar"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="?android:attr/actionBarSize"
             android:textAlignment="viewStart"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:tv_title="@string/edit_profile_sign_up"
             app:tv_actionStartVisible="true"
             app:tv_actionStartSrc="@drawable/ic_back"
@@ -31,11 +33,13 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputNameWrapper"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_default"
             android:layout_marginHorizontal="@dimen/margin_default"
-            app:layout_constraintTop_toBottomOf="@id/toolbar">
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/inputName"
                 android:layout_width="match_parent"
@@ -51,11 +55,13 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputSurnameWrapper"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_default"
             android:layout_marginHorizontal="@dimen/margin_default"
-            app:layout_constraintTop_toBottomOf="@id/inputNameWrapper">
+            app:layout_constraintTop_toBottomOf="@id/inputNameWrapper"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/inputSurname"
                 android:layout_width="match_parent"
@@ -71,12 +77,14 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnDone"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_default"
             android:layout_marginHorizontal="@dimen/margin_default"
             android:text="@string/edit_profile_done"
             app:layout_constraintTop_toBottomOf="@id/inputSurnameWrapper"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             style="@style/Widget.PassionWoman.Button.Colored"/>
 
         <androidx.appcompat.widget.AppCompatTextView
