--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -17,7 +17,7 @@
 
         <me.relex.circleindicator.CircleIndicator3
             android:id="@+id/pageIndicator"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="@dimen/onboarding_indicator_height"
             android:paddingBottom="20dp"
             app:ci_animator="@animator/circle_indicator_animator"
@@ -27,28 +27,34 @@
             app:ci_height="20dp"
             app:ci_width="20dp"
             app:ci_margin="@dimen/margin_small"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btnPrev"
             android:layout_width="@dimen/onboarding_navigation_width"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:paddingStart="@dimen/margin_small"
             android:paddingEnd="0dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_back"
             android:tint="@color/onPrimary"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btnNext"
             android:layout_width="@dimen/onboarding_navigation_width"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:paddingStart="0dp"
             android:paddingEnd="@dimen/margin_small"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_forward"
             android:tint="@color/onPrimary"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
