--- a/app/src/main/res/layout/view_item_category.xml
+++ b/app/src/main/res/layout/view_item_category.xml
@@ -12,11 +12,13 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivImage"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
             android:foreground="@color/category_shade"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintDimensionRatio="3:2"
             tools:src="@tools:sample/backgrounds/scenic"/>
 
