--- a/app/src/main/res/layout/view_item_onboarding_page.xml
+++ b/app/src/main/res/layout/view_item_onboarding_page.xml
@@ -33,13 +33,15 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvMessage"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_small"
             android:layout_marginHorizontal="@dimen/onboarding_navigation_width"
-            android:textAlignment="center"
+            android:gravity="center"
             app:layout_constraintBottom_toTopOf="@id/btnAction"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_bias="1"
             app:layout_goneMarginBottom="@dimen/onboarding_indicator_height"
             style="@style/Typography.PassionWoman.TextAppearance.Subtitle"
