--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -35,25 +35,29 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvOptions"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:nestedScrollingEnabled="false"
             android:orientation="vertical"
             android:paddingHorizontal="@dimen/margin_default"
             app:layout_constraintTop_toBottomOf="@id/ivLogo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="4"
             tools:listitem="@layout/item_contacts_option"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvAppVersion"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_default"
             android:layout_marginHorizontal="@dimen/margin_default"
-            android:textAlignment="center"
+            android:gravity="center_horizontal"
             app:layout_constraintTop_toBottomOf="@id/rvOptions"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:text="v1.0.0"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
