--- a/app/src/main/res/layout/layout_home_mock.xml
+++ b/app/src/main/res/layout/layout_home_mock.xml
@@ -9,19 +9,23 @@
 
         <include
             android:id="@+id/mockPromotions"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_default"
             android:layout_marginHorizontal="16dp"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             layout="@layout/view_item_home_promotions_mock"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/mockStories"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_default"
-            app:layout_constraintTop_toBottomOf="@id/mockPromotions">
+            app:layout_constraintTop_toBottomOf="@id/mockPromotions"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <include
                 android:id="@+id/mockStory1"
@@ -73,10 +77,12 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/mockProducts1"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_default"
-            app:layout_constraintTop_toBottomOf="@id/mockHeader1">
+            app:layout_constraintTop_toBottomOf="@id/mockHeader1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <include
                 android:id="@+id/mockProduct1"
