--- a/app/src/main/res/layout/view_input_range.xml
+++ b/app/src/main/res/layout/view_input_range.xml
@@ -96,16 +96,18 @@
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="tvFrom,tvTo,layoutInputFrom,layoutInputTo"/>
 
     <com.google.android.material.slider.RangeSlider
         android:id="@+id/rangeSlider"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/barrier"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:valueFrom="0"
         tools:valueTo="100"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
