--- a/app/src/main/res/layout/view_item_brand.xml
+++ b/app/src/main/res/layout/view_item_brand.xml
@@ -11,11 +11,13 @@
         android:layout_height="wrap_content">
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivLogo"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/white"
             android:scaleType="centerCrop"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             tools:src="@tools:sample/backgrounds/scenic"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
