--- a/app/src/main/res/layout/view_item_home_promotions.xml
+++ b/app/src/main/res/layout/view_item_home_promotions.xml
@@ -9,9 +9,11 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/layoutPromotionsWrapper"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintDimensionRatio="7:5">
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vpPromotions"
@@ -22,7 +24,7 @@
 
     <me.relex.circleindicator.CircleIndicator3
         android:id="@+id/pageIndicatorPromotions"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingBottom="8dp"
         android:layout_gravity="bottom"
@@ -34,5 +36,7 @@
         app:ci_height="8dp"
         app:ci_width="8dp"
         app:ci_margin="@dimen/margin_extra_small"
-        app:layout_constraintBottom_toBottomOf="@id/layoutPromotionsWrapper"/>
+        app:layout_constraintBottom_toBottomOf="@id/layoutPromotionsWrapper"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
