--- a/app/src/main/res/layout/view_item_range_filter.xml
+++ b/app/src/main/res/layout/view_item_range_filter.xml
@@ -8,18 +8,22 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         style="@style/Typography.PassionWoman.TextAppearance.Large"
         tools:text="@tools:sample/lorem/random"
         tools:lines="2"/>
 
     <ru.babaetskv.passionwoman.app.presentation.view.InputRangeView
         android:id="@+id/rangeView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:irv_labelFrom="@string/filters_range_from"
         app:irv_labelTo="@string/filters_range_to"
         app:irv_fromPrefix="$"
