--- a/app/src/main/res/layout/view_item_story_mock.xml
+++ b/app/src/main/res/layout/view_item_story_mock.xml
@@ -9,9 +9,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <View
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintDimensionRatio="3:4"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
