--- a/app/src/main/res/layout/view_stub.xml
+++ b/app/src/main/res/layout/view_stub.xml
@@ -9,10 +9,12 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivBanner"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:src="@drawable/banner_in_development"/>
 
     <androidx.appcompat.widget.AppCompatImageButton
@@ -26,14 +28,16 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvMessage"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_default"
-        android:textAlignment="center"
+        android:gravity="center"
         android:textAppearance="@style/Typography.PassionWoman.TextAppearance.Title"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintTop_toBottomOf="@id/ivBanner"
         app:layout_constraintBottom_toTopOf="@id/btnAction"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:text="@tools:sample/lorem/random"
         tools:lines="2"/>
 
