Redesigned product images

--- a/app/src/main/res/layout/fragment_product_card.xml
+++ b/app/src/main/res/layout/fragment_product_card.xml
@@ -18,68 +18,15 @@
             android:visibility="gone"
             tools:visibility="visible">
 
-            <FrameLayout
-                android:id="@+id/layoutPhotos"
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/vpPhotos"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintDimensionRatio="3:4">
-
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/vpPhotos"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    tools:background="@color/primaryVariant"/>
-
-                <me.relex.circleindicator.CircleIndicator3
-                    android:id="@+id/pageIndicator"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:paddingBottom="@dimen/margin_default"
-                    app:ci_animator="@animator/circle_indicator_animator"
-                    app:ci_gravity="center"
-                    app:ci_drawable="@drawable/circle_indicator_dot"
-                    app:ci_drawable_unselected="@drawable/circle_indicator_dot_unselected"
-                    app:ci_height="8dp"
-                    app:ci_width="8dp"
-                    app:ci_margin="@dimen/margin_extra_small" />
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/layoutEmpty"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/primaryVariant"
-                    android:visibility="gone"
-                    tools:visibility="visible">
-
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/ivEmptyIcon"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:tint="@color/secondary"
-                        app:srcCompat="@drawable/ic_no_photos"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBottom_toTopOf="@id/tvEmptyPhotos"
-                        app:layout_constraintVertical_chainStyle="packed"/>
-
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tvEmptyPhotos"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_default"
-                        android:text="@string/product_card_empty_photos"
-                        android:textAlignment="center"
-                        app:layout_constraintTop_toBottomOf="@id/ivEmptyIcon"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </FrameLayout>
+                app:layout_constraintDimensionRatio="3:4"
+                tools:background="@color/primaryVariant"/>
 
             <ru.babaetskv.passionwoman.app.presentation.view.ToolbarView
                 android:id="@+id/toolbar"
@@ -111,7 +58,7 @@
                 android:layout_marginTop="@dimen/margin_default"
                 android:layout_marginEnd="@dimen/margin_default"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@id/layoutPhotos"
+                app:layout_constraintTop_toBottomOf="@id/vpPhotos"
                 app:layout_constraintEnd_toEndOf="parent"
                 layout="@layout/view_item_brand"
                 tools:visibility="visible"/>
@@ -123,7 +70,7 @@
                 android:layout_marginTop="@dimen/margin_default"
                 android:layout_marginStart="@dimen/margin_default"
                 android:max="5"
-                app:layout_constraintTop_toBottomOf="@id/layoutPhotos"
+                app:layout_constraintTop_toBottomOf="@id/vpPhotos"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:progress="4"/>
 
