Refactored splash screen using android 12 API

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -62,4 +62,11 @@
         <item name="android:buttonStyleToggle">@style/Widget.PassionWoman.ToggleButton</item>
         <item name="sliderStyle">@style/Widget.PassionWoman.Slider</item>
     </style>
+
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/background</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_logo</item>
+        <item name="android:windowSplashScreenAnimationDuration" tools:targetApi="31">1000</item>
+        <item name="postSplashScreenTheme">@style/Theme.PassionWoman</item>
+    </style>
 </resources>
