--- a/app/src/main/res/values/widgets.xml
+++ b/app/src/main/res/values/widgets.xml
@@ -10,6 +10,7 @@
         <item name="android:foreground">?android:attr/selectableItemBackgroundBorderless</item>
         <item name="android:clickable">true</item>
         <item name="cardBackgroundColor">@color/primaryVariant</item>
+        <item name="cardElevation">4dp</item>
     </style>
 
     <style name="Widget.PassionWoman.ImageButton" parent="Widget.AppCompat.ImageButton">
