--- a/app/src/main/res/layout/fragment_product_card.xml
+++ b/app/src/main/res/layout/fragment_product_card.xml
@@ -36,6 +36,7 @@
                 android:id="@+id/vpPhotos"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:paddingVertical="@dimen/margin_small"
                 android:clipToPadding="false"
                 android:clipChildren="false"
                 app:layout_constraintTop_toBottomOf="@id/toolbar"
