--- a/app/src/main/res/layout/view_item_home_products.xml
+++ b/app/src/main/res/layout/view_item_home_products.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingHorizontal="@dimen/margin_small"
     android:clipToPadding="false"
     android:layoutAnimation="@anim/layout_fade_in"
     android:orientation="horizontal"
