--- a/app/src/main/res/layout/view_item_product.xml
+++ b/app/src/main/res/layout/view_item_product.xml
@@ -10,6 +10,8 @@
         android:id="@+id/layoutPreview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_small"
+        android:layout_marginHorizontal="@dimen/margin_small"
         app:cardElevation="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_small"
+        android:layout_marginStart="@dimen/margin_small"
         android:lines="1"
         android:ellipsize="end"
         app:layout_constraintHorizontal_bias="0"
@@ -92,6 +95,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_extra_small"
+        android:layout_marginHorizontal="@dimen/margin_small"
         android:lines="2"
         android:ellipsize="end"
         app:layout_constraintTop_toBottomOf="@id/tvPrice"
@@ -103,8 +107,11 @@
         android:id="@+id/btnBuy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginBottom="@dimen/margin_small"
         android:text="@string/item_product_button_buy"
         app:layout_constraintTop_toBottomOf="@id/tvName"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         style="@style/Widget.PassionWoman.Button.Colored"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
